Import Project Popup, New Project UI rework, Project List
New UI Import Project Popup
New Project UI rework to two cols
Project List expand collapse

--- a/renderer/src/components/EditorPage/Navigation/reference/SelectReference.module.css
+++ b/renderer/src/components/EditorPage/Navigation/reference/SelectReference.module.css
@@ -1,3 +1,7 @@
 .select {
-  @apply py-2 px-3 hover:bg-primary hover:text-white cursor-pointer;
+  @apply py-1 px-2 hover:bg-primary hover:text-white cursor-pointer rounded;
+}
+
+.active {
+  @apply py-1 px-2 bg-primary text-white cursor-pointer rounded;
 }
