--- a/styles/style-override.lazy.css
+++ b/styles/style-override.lazy.css
@@ -1,64 +1,189 @@
-.usfm-editor {
-	background-color: darkslategray;
-	color: oldlace;
-	border-radius: 1em;
-	padding: 2em;
+/* Hide extra breaks that are not created by the usfm editor */
+br {
+	display: none;
 }
-
-.usfm-marker-s {
-	font-family: cursive;
+br.usfm-editor-break {
+	display: block;
 }
-
-.usfm-marker-bk {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-style: italic;
-}
-
-.usfm-marker-nd {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-variant: small-caps;
-	font-size: large;
-}
-
-.usfm-marker-c {
+/* Don't display a break after a section header */
+.usfm-marker-s + br {
 	display: none;
 }
 
+h1.usfm-marker-s {
+	text-align: center;
+	margin: 0.5em 0;
+	font-size: 2em;
+}
+h2.usfm-marker-s {
+	text-align: center;
+	margin: 0.5em 0;
+	font-size: 1.5em;
+}
+h3.usfm-marker-s {
+	text-align: center;
+	margin: 0.5em 0;
+	font-size: 1.17em;
+}
+h4.usfm-marker-s {
+	text-align: center;
+	margin: 0.5em 0;
+	font-size: 1.12em;
+}
+h5.usfm-marker-s {
+	text-align: center;
+	margin: 0.5em 0;
+	font-size: 0.83em;
+}
+h6.usfm-marker-s {
+	text-align: center;
+	margin: 0.5em 0;
+	font-size: 0.75em;
+}
+
+hr.usfm-editor-hr {
+	display: none;
+	margin: 0;
+}
+
+.usfm-editor-headers {
+	display: none;
+}
+
+.usfm-editor {
+	margin-top: 1em;
+	overflow-y: scroll;
+	-ms-overflow-style: none; /* No scrollbar- IE and Edge */
+	scrollbar-width: none; /* Firefox */
+} /* Override font, bg color, etc. */
+
+.usfm-editor::-webkit-scrollbar {
+	display: none; /* Chrome, Safari, Opera */
+}
+
+.usfm-editor-chapter {
+}
+
+.usfm-marker-p {
+	font-weight: bolder;
+}
+
+.usfm-editor-context-menu:not(:empty) {
+	padding: 8px 7px 6px;
+	position: absolute;
+	z-index: 1;
+	top: -10000px;
+	left: -10000px;
+	margin-top: -6px;
+	opacity: 0;
+	background-color: #222;
+	border-radius: 4px;
+	transition: opacity 0.75s;
+}
+
+/* Give space between verse numbers when a verse is empty.
+The verse is empty if the inline container is empty and it is 
+the last child. */
+.usfm-editor-empty-inline:last-child {
+	margin: 0 0.5em 0 0;
+}
+
+.usfm-editor-unrendered-marker {
+	display: none;
+}
+
+.usfm-editor-verse {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	/* display: block; */
+}
+
+/* Italics are accomplished via the <cite> tag so that
+ other font styles may be applied */
+.usfm-marker-bk {
+}
+
+.usfm-marker-mt {
+	display: none;
+}
+
+.usfm-marker-c {
+	float: left;
+	font-size: 200%;
+	margin: 0 0.2em 0 0;
+	display: inline;
+	background-color: white;
+	display: none;
+}
+
+.usfm-marker-c.usfm-editor-front,
+.usfm-marker-v.usfm-editor-front {
+	display: none;
+}
+
+.usfm-marker-nd {
+	font-variant: small-caps;
+}
+
+.usfm-marker-v.no-select {
+	font-weight: 700;
+	padding-right: 3px;
+	top: -1px;
+}
+
 .usfm-marker-v {
-	background-color: transparent;
-	color: lightblue;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
+	display: inline-block;
+	margin: 0 0.2em 0 0;
+	background-color: white;
+	padding-top: 20px;
 }
 
-.chapter-selector {
-	min-width: 99%;
+.no-select {
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
-.chapter-selector::before {
-	content: 'Choose a chapter:';
+.toolbar {
+	padding-left: 0;
 }
 
 .toolbar-button {
-	background-color: lightgray;
+	min-width: 3em;
+	font-size: 16px; /* Default for material-UI icons */
+	font-weight: bold;
 }
 
 .toolbar-button-active {
-	color: blue;
+	color: black;
 }
 
 .toolbar-button-inactive {
-	color: rgb(22, 22, 22);
+	color: rgb(204, 204, 204);
 }
 
 .toolbar-button:hover {
-	background-color: lightblue;
+	background-color: transparent;
 }
 
 .toolbar-button-active .toolbar-icon {
-	fill: blue;
+	fill: black;
 }
 
 .toolbar-button-inactive .toolbar-icon {
-	fill: rgb(22, 22, 22);
+	fill: rgb(204, 204, 204);
+}
+
+.verse-selector {
+	padding-bottom: 20px;
+}
+
+.border-bottom {
+	border-bottom: 3px solid rgb(238, 238, 238);
+}
+
+.fixed-size {
+	display: flex;
+	flex-flow: column;
 }
