Indicator to show saving and saved after editing ufsm content

--- a/renderer/src/layouts/editor/MenuBar.module.css
+++ b/renderer/src/layouts/editor/MenuBar.module.css
@@ -5,6 +5,16 @@
   focus:outline-none focus:ring-1 focus:ring-offset-1 focus:ring-offset-gray-300 focus:ring-gray-300;
 }
 
+/* .saved {
+  @apply inline-flex items-center px-2 py-1 mx-1 border border-gray-200 rounded-md shadow-sm 
+  text-sm text-dark bg-gray-100 
+  focus:outline-none focus:ring-1 focus:ring-offset-1 focus:ring-offset-gray-300 focus:ring-gray-300;
+} */
+
+.saved {
+  @apply inline-flex items-center px-2 py-1 mx-1 text-sm text-dark font-bold;
+}
+
 .btnDark {
   @apply inline-flex items-center px-2 py-1 mx-2 border border-gray-200 rounded-md shadow-sm 
   text-sm text-primary bg-gray-100 
