--- a/renderer/src/components/EditorPage/Navigation/reference/SelectReference.module.css
+++ b/renderer/src/components/EditorPage/Navigation/reference/SelectReference.module.css
@@ -1,7 +1,10 @@
 .select {
-  @apply py-1 px-2 hover:bg-primary hover:text-white cursor-pointer rounded;
+	@apply py-1 px-2 hover:bg-primary hover:text-white cursor-pointer rounded hover:w-auto;
+}
+.bookSelect {
+	@apply py-1 px-2 hover:bg-primary hover:text-white cursor-pointer rounded hover:w-5/12;
 }
 
 .active {
-  @apply py-1 px-2 bg-primary text-white cursor-pointer rounded;
+	@apply py-1 px-2 bg-primary text-white cursor-pointer rounded w-5/12;
 }
